--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
 
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Consciously Produced</title>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <style>
+            @import url('');
+        </style>
+        <link rel="" type="" href="">
+    </head>
+  
+  <body>
+    <header>
+    </header>
+    <main>
+      hello world
+    </main>
+    <footer>
+    </footer>
+  </body>
+  
+</html>
