--- a/index.html
+++ b/index.html
@@ -17,11 +17,21 @@
   
   <body>
     <header>
+        <h1>LOGO</h1>
+        <nav>
+            <a href="">LINK</a>
+            <a href="">LINK</a>
+            <a href="">LINK</a>
+            <a href="">LINK</a>
+        </nav>
     </header>
     <main>
-      hello world
+        <div>TEXT</div>
+        <div>TEXT</div>
+        <div>TEXT</div>
     </main>
     <footer>
+        <h1>FOOTER</h1>
     </footer>
   </body>
   
