--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <style>
+        @import url('');
+    </style>
+    <link rel="" type="" href="">
+</head>
+<body>
+    <header>
+        <div>
+            <img src="" alt="logo">
+            <h1>Project Title</h1>
+            <p>Description</p>
+        </div>
+    </header>
+    <main>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </main>
+</body>
+</html>
