--- a/about.html
+++ b/about.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <style>
+        @import url('');
+    </style>
+    <link rel="" type="" href="">
+</head>
+<body>
+    <header>ABOUT PAGE</header>
+    <main>
+        <div>
+            <img src="" alt="Ariane's headshot image">
+            <p>Ariane's bio text</p>
+        </div>
+        <div>
+            <h1>TEAM</h1>
+            <img src="" alt="">
+            <h2>Name</h2>
+            <p>Bio Text</p>
+        </div>
+    </main>
+    <footer></footer>
+</body>
+</html>
