--- a/consciouslyrested.html
+++ b/consciouslyrested.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Consciously Rested</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <style>
+        @import url('');
+    </style>
+    <link rel="" type="" href="">
+</head>
+<body>
+    <header>
+        <div><h1>Consciously Rested</h1></div>
+    </header>
+    <main>
+        <div>
+            <p>Text</p>
+        </div>
+    </main>
+    <footer></footer>
+</body>
+</html>
