--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   
   <body>
     <header>
+            <a class="logo" href=""><img class="logo" src="images/CP_logo_OG_update.png" alt=""></a>
         <h1>LOGO</h1>
         <nav>
             <a href="">LINK</a>
