--- a/index.html
+++ b/index.html
@@ -12,27 +12,63 @@
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
 </style>
-        <link rel="" type="" href="">
+        <link rel="icon" type="" href="images/CPtoken_OG.png">
     </head>
   
-  <body>
+  <body class="light">
     <header>
-        <a class="logo" href=""><img class="logo" src="images/CP_logo_OG_update.png" alt=""></a>
-        <h1>LOGO</h1>
-        <nav>
-            <a href="">LINK</a>
-            <a href="">LINK</a>
-            <a href="">LINK</a>
-            <a href="">LINK</a>
-        </nav>
+            <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OGupdate.png" alt=""></a>
+            <nav>
+                <a href="about.html">about</a>
+                <a href="projects.html">projects</a>
+                <a href="consciouslyrested.html">consciously rested</a>
+                <a href="contact.html">contact</a>
+             </nav>
     </header>
     <main>
-        <div>TEXT</div>
-        <div>TEXT</div>
-        <div>TEXT</div>
+        <div class="hero">
+            <div class="herotext">Consciously Produced LLC, founded by Ariane Michaud, specializes in creative productions—ranging from conferences and podcasts to dance and theater performances. With a commitment to fostering connection and community, we bring a thoughtful approach to every project, ensuring each endeavor leaves a <a class="bold">lasting impact.</a></div>
+            <div class="heroimage"> <img src="images/CP_logo_OGupdate.png" alt=""></div>
+        </div>
+        <div class="offerBlock"> 
+            <div class="subtitle">We offer more than just technical expertise; we provide support in shaping narratives that truly resonate. </div>
+             <div class="subtitle2">Art and gathering are central to our mission, reflecting our belief in the power of creative expression and communal experiences to inspire and bring people together. </div>
+        </div>
+            <div class="scrolling-text-inner" style="--marquee-speed: 20s; --direction:scroll-left" role="marquee">
+                <div class="scrolling-text">
+                    <div class="scrolling-text-item">Dance & Theater</div>
+                    <div class="scrolling-text-item">Conferences</div>
+                    <div class="scrolling-text-item">Events</div>
+                    <div class="scrolling-text-item">Podcasts</div>
+                    <div class="scrolling-text-item">Company Retreats</div>
+                    <div class="scrolling-text-item">Fundraisers</div>
+                    <div class="scrolling-text-item">More!</div>
+            </div>
+        </div>
+        </div>
+        <div class="photoColumn">
+            <img src="images/arianeSands.png" alt="">
+            <p class="subtitle3">In addition to our versatile event productions, we specialize in crafting experiences that are tech-forward and cross-disciplinary. We love finding connections that are maybe not so obvious to others, like our current projects with dance and robots.
+                We can act as consultants, partnering producers, or full-event producers. That decision will be made during our initial meetings together.</p>
+        </div>
+    
+        <div class="twocolumn">
+            <div class="twocolumnsection left">
+                <div class="twocolumntitle">location independent</div>
+                <div class="twocolumntext">Operating with a location-independent mindset, we call the East Coast our home but are always open to exploring new horizons for the right project</div>
+            </div>
+            <div class="twocolumnsection right">
+                <div class="twocolumntitle below">our approach to collaboration</div>
+                <div class="twocolumntext">We view our clients as collaborators, not patrons. We work hand in hand with our clients to craft an experience that authentically represents their vision. Your input is not only valued; it is essential.</div>
+            </div>
+
+        </div>
     </main>
     <footer>
-        <h1>FOOTER</h1>
+        <p>SOCIAL MEDIA LINKS HERE</p>
+        <p>Copyright ConsciouslyProduced 2024</p>
+        <p>Logo designed by Martin Bonilla</p>
+        <p>Any other standard boiler plate language can go here if needed.</p>
     </footer>
   </body>
   
