--- a/about.html
+++ b/about.html
@@ -7,24 +7,60 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
-        @import url('');
+        @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
     </style>
-    <link rel="" type="" href="">
+     <link rel="icon" type="" href="images/CPtoken_OG.png">
 </head>
-<body>
-    <header>ABOUT PAGE</header>
+<body class="light">
+    <header>
+        <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OGupdate.png" alt=""></a>
+        <nav>
+            <a href="about.html">about</a>
+            <a href="projects.html">projects</a>
+            <a href="consciouslyrested.html">consciously rested</a>
+            <a href="contact.html">contact</a>
+         </nav>
+</header>
     <main>
-        <div>
-            <img src="" alt="Ariane's headshot image">
-            <p>Ariane's bio text</p>
+        <div class="bioSection">
+            <img src="images/Ariane_bw.jpeg" alt="Ariane's headshot image">
+            <div> <p class="bioTitle">Ariane Michaud</p>
+                <p class="bioRole">founder & CEO</p>
+                <p class="bioText">Ariane Michaud has worked as a producer for over a decade, building and strengthening communities that support the arts and advance social justice. Her passion for dance has led her to diverse roles within the industry, including serving as a producer for DANCE NOW NYC, The Conference for Research on Choreographic Interfaces, and as the Executive Producer of the Dances with Robots Podcast. Ariane’s expertise is based in strategic planning - she believes that a solid plan is what leads to success. But her true passion is working with others and bringing their vision to life through creative collaborations, especially when those projects involve interdisciplinarity, technology, and crazy (sometimes almost impossible) ideas. 
+                    When Ariane isn’t busy sending dancers into space, she is cultivating her passion for movement and mindfulness. She is a practicing dancer, yoga teacher, and occasional van lifer looking for community wherever she goes. 
+                    </p></div>
         </div>
         <div>
-            <h1>TEAM</h1>
-            <img src="" alt="">
-            <h2>Name</h2>
-            <p>Bio Text</p>
+            <p class="collaboratorTitle">Collaborators</p>
+            <p class="collaboratorText">For each project or client, we curate the best project team matched to your vision. These industry experts not only share your passion but are also instrumental in bringing it to life.
+                </p>
         </div>
+        <div>
+            <p class="collaboratorTitle">Testimonials</p>
+        </div>
+        <div class="testimonialBlockleft">
+            <img src="images/Kevin-Clark-headshot.png">
+            <p>Ariane is an amazing strategist and leader. I've worked with Ariane on a variety of projects, including traveling together to lead workshops, producing a conference, and being custodians of a community of artists and technologists over five plus years. It's been a privilege to work with Ariane. - Kevin Clark</p>
+        </div>
+        <div class="testimonialBlockright"> 
+            <p>Ariane was always professional, resourceful, organized, creative, reliable and immensely supportive. She rose to every challenge, providing educational insight, and intuitively understood when necessary steps needed attention. "How is this working for you? and "How can I help you?" were always her questions for me. I have seen her working in other scenarios, and have always been inspired by her clarity and tenacity. - Megan Williams (Megan Williams Dance Company, NYC)</p>
+            <img src="images/Kevin-Clark-headshot.png">
+        </div>
+        <div class="testimonialBlockleft"> 
+            <img src="images/Kevin-Clark-headshot.png">
+            <p>Ariane Michaud is a talented project visionary and manager. Working with Ariane in the contemporary dance field, I have seen her holistically assist artists in developing, planning, managing and finding financial support for a concept from inception to final presentation. - Lauren Parrish (Abrons Arts Center, NYC)</p>
+        </div>
+        <div class="testimonialBlockright">
+            <p>Ariane is one of the most focused, driven, ambitious and passionate culture warriors I know. I hire her literally whenever I can. - Sydney Skybetter</p>
+            <img src="images/Kevin-Clark-headshot.png">
+        </div>
+        <div class="space"></div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>SOCIAL MEDIA LINKS HERE</p>
+        <p>Copyright ConsciouslyProduced 2024</p>
+        <p>Logo designed by Martin Bonilla</p>
+        <p>Any other standard boiler plate language can go here if needed.</p>
+    </footer>
 </body>
 </html>
