--- a/projects.html
+++ b/projects.html
@@ -3,27 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
-        @import url('');
+        @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
     </style>
-    <link rel="" type="" href="">
+     <link rel="icon" type="" href="images/CPtoken_OG.png">
 </head>
-<body>
+<body class="light">
     <header>
-        <div>
-            <img src="" alt="logo">
-            <h1>Project Title</h1>
-            <p>Description</p>
-        </div>
-    </header>
+        <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OGupdate.png" alt=""></a>
+        <nav>
+            <a href="about.html">about</a>
+            <a href="projects.html">projects</a>
+            <a href="consciouslyrested.html">consciously rested</a>
+            <a href="contact.html">contact</a>
+         </nav>
+</header>
     <main>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+       <div class="DWRproject" href="https://danceswithrobots.org/">
+        <img class="DWRimage" src="images/CRCI_Version01.jpg" alt="">
+        <div class="DWRinfo">
+            <a href="https://danceswithrobots.org/" class="DWRtitle">Dances With Robots</a>
+            <p class="DWRpodcast">the podcast</p>
+            <p class="DWRabout">The Conference for Research on Choreographic Interfaces (CRCI) presents Dances with Robots: a podcast catalyzed by the corporeal risks and expressive opportunities of contemporary technologies. Join our host, choreographer and Dean at Brown University, Sydney Skybetter, alongside a series of guest hosts, as we explore the ways that artists, activists and technologists navigate the world through interdisciplinary practice.</p>
+        </div>
+       </div>
+<div class="projectBlocks">
+    <div class="container">
+        <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+            <div class="text">The Conference for Research on Choreographic Interfaces (CRCI) presents Dances with Robots: a podcast catalyzed by the corporeal risks and expressive opportunities of contemporary technologies. Join our host, choreographer and Dean at Brown University, Sydney Skybetter, alongside a series of guest hosts, as we explore the ways that artists, activists and technologists navigate the world through interdisciplinary practice.</div>
+        </div>
+    </div> 
+    <div class="container">
+        <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+            <div class="text">Hello World</div>
+        </div>
+    </div>        
+</div>
+
+<div class="projectBlocks">
+    <div class="container">
+        <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+            <div class="text">Hello World</div>
+        </div>
+    </div> 
+    <div class="container">
+        <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+            <div class="text">Hello World</div>
+        </div>
+    </div>        
+</div>
+           
     </main>
+    <footer>
+        <p>SOCIAL MEDIA LINKS HERE</p>
+        <p>Copyright ConsciouslyProduced 2024</p>
+        <p>Logo designed by Martin Bonilla</p>
+        <p>Any other standard boiler plate language can go here if needed.</p>
+    </footer>
 </body>
 </html>
