--- a/consciouslyrested.html
+++ b/consciouslyrested.html
@@ -7,19 +7,39 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
-        @import url('');
+       @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
     </style>
-    <link rel="" type="" href="">
+    <link rel="icon" type="" href="images/CRtoken_OG.png">
 </head>
-<body>
-    <header>
-        <div><h1>Consciously Rested</h1></div>
-    </header>
+    <body class="dark">
+        <header class="dark">
+                <a class="logo" href="index.html"><img class="logo" src="images/CR_logo_OG.png" alt=""></a>
+                <nav>
+                    <a href="about.html">about</a>
+                    <a href="projects.html">projects</a>
+                    <a href="consciouslyrested.html">consciously rested</a>
+                    <a href="contact.html">contact</a>
+                 </nav>
+        </header>
     <main>
-        <div>
-            <p>Text</p>
+        <div class="CRbodytext">
+            <p> Consciously Rested, a wing of Consciously Produced LLC, embodies our belief that rest and rejuvenation are essential for achieving our best work. We specialize in providing tools and practices designed to support relaxation and renewal, ensuring that individuals can recharge and thrive.</p>
+        </div>
+        <div class="CRinfo">
+            <p class="CRtitle">Current offerings:</p>
+            <p>Group and Private Yoga Classes: Enhance flexibility, strength, and relaxation.</p>
+           <p>Group and Private Meditation Workshops: In partnership with SparkHabits, these workshops help reduce stress and improve mental clarity.</p> 
+            <p>Group and Private Restorative Movement Sessions: Activate the rest/digest state for deep relaxation and healing.</p>
+            <p>Individual Sound Healings (Coming Soon): Utilize sound vibrations to promote physical and emotional well-being.</p>
+            <p>Wellness Retreats for Small Groups or Organizations: Customizable retreats designed to foster team bonding and individual well-being.</p>
+            <p>Customization options are available to meet your specific needs. Pricing details are available upon request.</p>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>SOCIAL MEDIA LINKS HERE</p>
+        <p>Copyright ConsciouslyProduced 2024</p>
+        <p>Logo designed by Martin Bonilla</p>
+        <p>Any other standard boiler plate language can go here if needed.</p>
+    </footer>
 </body>
 </html>
