--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <div class="hero">
             <div class="herotext">Consciously Produced LLC, founded by Ariane Michaud, specializes in creative productions—ranging from conferences and podcasts to dance and theater performances. With a commitment to fostering connection and community, we bring a thoughtful approach to every project, ensuring each endeavor leaves a <a class="bold">lasting impact.</a></div>
-            <div class="heroimage"> <img src="images/CP_logo_OGupdate.png" alt=""></div>
+            <div class="heroimage"> <img src="images/CP_logo_OG_update.png" alt=""></div>
         </div>
         <div class="offerBlock"> 
             <div class="subtitle">We offer more than just technical expertise; we provide support in shaping narratives that truly resonate. </div>
