--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     </head>
 <body class="light">
     <header>
-        <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OGupdate.png" alt=""></a>
+        <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OG_update.png" alt=""></a>
         <nav>
             <a href="about.html">about</a>
             <a href="projects.html">projects</a>
