--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <body class="light">
     <header>
-            <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OGupdate.png" alt=""></a>
+            <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OG_update.png" alt=""></a>
             <nav>
                 <a href="about.html">about</a>
                 <a href="projects.html">projects</a>
