--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
 </head>
 <body class="light">
     <header>
-        <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OG_update.png" alt=""></a>
+        <div class="logobox">
+            <a class="logo" href="index.html">Consciously Produced</a>
+        </div>
         <nav>
             <a href="about.html">about</a>
             <a href="projects.html">projects</a>
@@ -26,8 +28,8 @@
             <img src="images/Ariane_bw.jpeg" alt="Ariane's headshot image">
             <div> <p class="bioTitle">Ariane Michaud</p>
                 <p class="bioRole">founder & CEO</p>
-                <p class="bioText">Ariane Michaud has worked as a producer for over a decade, building and strengthening communities that support the arts and advance social justice. Her passion for dance has led her to diverse roles within the industry, including serving as a producer for DANCE NOW NYC, The Conference for Research on Choreographic Interfaces, and as the Executive Producer of the Dances with Robots Podcast. Ariane’s expertise is based in strategic planning - she believes that a solid plan is what leads to success. But her true passion is working with others and bringing their vision to life through creative collaborations, especially when those projects involve interdisciplinarity, technology, and crazy (sometimes almost impossible) ideas. 
-                    When Ariane isn’t busy sending dancers into space, she is cultivating her passion for movement and mindfulness. She is a practicing dancer, yoga teacher, and occasional van lifer looking for community wherever she goes. 
+                <p class="bioText">
+                    Ariane Michaud has worked as a producer and creative consultant for over a decade, building and strengthening communities that support the arts and advance social justice. Her expertise lies in strategic planning—she believes that a solid plan is the foundation of success. Yet, her true passion is collaborating with others to bring their visions to life, especially when projects involve interdisciplinarity, technology, and bold (sometimes almost impossible) ideas. When Ariane isn’t busy bringing ambitious ideas to life, she’s cultivating her passion for movement and mindfulness. She is a practicing dancer, yoga teacher, and occasional van lifer, always seeking community wherever she goes.
                     </p></div>
         </div>
         <div>
@@ -39,20 +41,20 @@
             <p class="collaboratorTitle">Testimonials</p>
         </div>
         <div class="testimonialBlockleft">
-            <img src="images/Kevin-Clark-headshot.png">
+            <img src="">
             <p>Ariane is an amazing strategist and leader. I've worked with Ariane on a variety of projects, including traveling together to lead workshops, producing a conference, and being custodians of a community of artists and technologists over five plus years. It's been a privilege to work with Ariane. - Kevin Clark</p>
         </div>
         <div class="testimonialBlockright"> 
             <p>Ariane was always professional, resourceful, organized, creative, reliable and immensely supportive. She rose to every challenge, providing educational insight, and intuitively understood when necessary steps needed attention. "How is this working for you? and "How can I help you?" were always her questions for me. I have seen her working in other scenarios, and have always been inspired by her clarity and tenacity. - Megan Williams (Megan Williams Dance Company, NYC)</p>
-            <img src="images/Kevin-Clark-headshot.png">
+            <img src="">
         </div>
         <div class="testimonialBlockleft"> 
-            <img src="images/Kevin-Clark-headshot.png">
+            <img src="">
             <p>Ariane Michaud is a talented project visionary and manager. Working with Ariane in the contemporary dance field, I have seen her holistically assist artists in developing, planning, managing and finding financial support for a concept from inception to final presentation. - Lauren Parrish (Abrons Arts Center, NYC)</p>
         </div>
         <div class="testimonialBlockright">
             <p>Ariane is one of the most focused, driven, ambitious and passionate culture warriors I know. I hire her literally whenever I can. - Sydney Skybetter</p>
-            <img src="images/Kevin-Clark-headshot.png">
+            <img src="">
         </div>
         <div class="space"></div>
     </main>
