--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,9 @@
 </head>
 <body class="light">
     <header>
-        <a class="logo" href="index.html"><img class="logo" src="images/CP_logo_OG_update.png" alt=""></a>
+        <div class="logobox">
+            <a class="logo" href="index.html">Consciously Produced</a>
+        </div>
         <nav>
             <a href="about.html">about</a>
             <a href="projects.html">projects</a>
@@ -22,30 +24,30 @@
          </nav>
 </header>
     <main>
-       <div class="DWRproject" href="https://danceswithrobots.org/">
-        <img class="DWRimage" src="images/CRCI_Version01.jpg" alt="">
-        <div class="DWRinfo">
-            <a href="https://danceswithrobots.org/" class="DWRtitle">Dances With Robots</a>
-            <p class="DWRpodcast">the podcast</p>
-            <p class="DWRabout">The Conference for Research on Choreographic Interfaces (CRCI) presents Dances with Robots: a podcast catalyzed by the corporeal risks and expressive opportunities of contemporary technologies. Join our host, choreographer and Dean at Brown University, Sydney Skybetter, alongside a series of guest hosts, as we explore the ways that artists, activists and technologists navigate the world through interdisciplinary practice.</p>
+       <div class="mainproject" href="https://choreographicinterfaces.org/">
+        <img class="mainimage" src="images/CRCI20172.jpg" alt="">
+        <div class="maininfo">
+            <a href="https://choreographicinterfaces.org//" class="maintitle">The Conference for Research on Choreographic Interfaces (CRCI):</a>
+            <p class="mainsubtitle">Annual Conference 2025</p>
+            <p class="mainabout">CRCI explores the braid of choreography, computation, and surveillance through an interdisciplinary lens. Consciously Produced will oversee the production of the 2025 annual conference at Brown University's Granoff Center, facilitating meaningful discussions among leading voices in the field. More information coming soon. </p>
         </div>
        </div>
 <div class="projectBlocks">
     <div class="container">
         <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
         <div class="overlay">
-            <div class="text">The Conference for Research on Choreographic Interfaces (CRCI) presents Dances with Robots: a podcast catalyzed by the corporeal risks and expressive opportunities of contemporary technologies. Join our host, choreographer and Dean at Brown University, Sydney Skybetter, alongside a series of guest hosts, as we explore the ways that artists, activists and technologists navigate the world through interdisciplinary practice.</div>
+            <div class="text">A continuation of founder Ariane Michaud’s work on the first season of the podcast, Consciously Produced is now supporting the production of the second season, with Ariane taking on a role as one of the main hosts. More information at www.danceswithrobots.org </div>
         </div>
     </div> 
-    <div class="container">
-        <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
+    <div class="container project2">
+        <img src="images/SparkHabits_Branding_Logo_Black.png" alt="Avatar" class="image">
         <div class="overlay">
-            <div class="text">Hello World</div>
+            <div class="text">Consciously Produced is currently serving as the strategic planning consultant for this exciting, coming soon, behavior change app. </div>
         </div>
     </div>        
 </div>
 
-<div class="projectBlocks">
+<!--<div class="projectBlocks">
     <div class="container">
         <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
         <div class="overlay">
@@ -58,7 +60,7 @@
             <div class="text">Hello World</div>
         </div>
     </div>        
-</div>
+</div>-->
            
     </main>
     <footer>
