--- a/consciouslyrested.html
+++ b/consciouslyrested.html
@@ -13,7 +13,9 @@
 </head>
     <body class="dark">
         <header class="dark">
-                <a class="logo" href="index.html"><img class="logo" src="images/CR_logo_OG.png" alt=""></a>
+            <div class="logobox">
+                <a class="logo" href="index.html">Consciously Rested</a>
+            </div>
                 <nav>
                     <a href="about.html">about</a>
                     <a href="projects.html">projects</a>
@@ -22,18 +24,26 @@
                  </nav>
         </header>
     <main>
+     <div class="yogaBody">
+        <img src="images/ArianeYoga1.png">
         <div class="CRbodytext">
-            <p> Consciously Rested, a wing of Consciously Produced LLC, embodies our belief that rest and rejuvenation are essential for achieving our best work. We specialize in providing tools and practices designed to support relaxation and renewal, ensuring that individuals can recharge and thrive.</p>
+            <p> Consciously Rested, a branch of Consciously Produced, embodies the belief that rest is essential for optimal performance. We curate mindful events and experiences designed to support relaxation and renewal, helping individuals recharge and thrive.</p>
+            <p>Our specialized retreats cater to the unique needs of your organization, offering an immersive experience focused on wellness, team building, personal growth, and strategic planning. These retreats are customizable to align with your goals, providing a combination of movement practices, mindfulness sessions, relaxation techniques, and work-focused sessions to rejuvenate your team and foster a positive, productive work environment.</p>
+            <p>We can also host sessions and workshops in your workspace, providing convenient, on-site opportunities for team revitalization.</p>
         </div>
-        <div class="CRinfo">
-            <p class="CRtitle">Current offerings:</p>
-            <p>Group and Private Yoga Classes: Enhance flexibility, strength, and relaxation.</p>
-           <p>Group and Private Meditation Workshops: In partnership with SparkHabits, these workshops help reduce stress and improve mental clarity.</p> 
-            <p>Group and Private Restorative Movement Sessions: Activate the rest/digest state for deep relaxation and healing.</p>
-            <p>Individual Sound Healings (Coming Soon): Utilize sound vibrations to promote physical and emotional well-being.</p>
-            <p>Wellness Retreats for Small Groups or Organizations: Customizable retreats designed to foster team bonding and individual well-being.</p>
-            <p>Customization options are available to meet your specific needs. Pricing details are available upon request.</p>
+<div class="circleBody">
+    <div class="circlecontainer">
+        <div class="half-circle"></div>
+        <div class="circles">
+            <div class="circle">Yoga Classes</div>
+            <div class="circle">Meditation Workshops</div>
+            <div class="circle">Restorative Movement Sessions</div>
+            <div class="circle">Individual Sound Healing</div>
+            <div class="circle">Company Retreats</div>
         </div>
+    </div>
+</div>
+     </div>
     </main>
     <footer>
         <p>SOCIAL MEDIA LINKS HERE</p>
