--- a/about.html
+++ b/about.html
@@ -24,19 +24,16 @@
          </nav>
 </header>
     <main>
+        <div class="aboutbackground">
         <div class="bioSection">
-            <img src="images/Ariane_bw.jpeg" alt="Ariane's headshot image">
+            <img src="images/ariane_gradienthalo.png" alt="Ariane's headshot image">
             <div> <p class="bioTitle">Ariane Michaud</p>
                 <p class="bioRole">founder & CEO</p>
                 <p class="bioText">
                     Ariane Michaud has worked as a producer and creative consultant for over a decade, building and strengthening communities that support the arts and advance social justice. Her expertise lies in strategic planning—she believes that a solid plan is the foundation of success. Yet, her true passion is collaborating with others to bring their visions to life, especially when projects involve interdisciplinarity, technology, and bold (sometimes almost impossible) ideas. When Ariane isn’t busy bringing ambitious ideas to life, she’s cultivating her passion for movement and mindfulness. She is a practicing dancer, yoga teacher, and occasional van lifer, always seeking community wherever she goes.
                     </p></div>
         </div>
-        <div>
-            <p class="collaboratorTitle">Collaborators</p>
-            <p class="collaboratorText">For each project or client, we curate the best project team matched to your vision. These industry experts not only share your passion but are also instrumental in bringing it to life.
-                </p>
-        </div>
+
         <div>
             <p class="collaboratorTitle">Testimonials</p>
         </div>
@@ -57,6 +54,7 @@
             <img src="">
         </div>
         <div class="space"></div>
+    </div>
     </main>
     <footer>
         <p>SOCIAL MEDIA LINKS HERE</p>
