--- a/projects.html
+++ b/projects.html
@@ -23,18 +23,10 @@
             <a href="contact.html">contact</a>
          </nav>
 </header>
-    <main>
-       <div class="mainproject" href="https://choreographicinterfaces.org/">
-        <img class="mainimage" src="images/CRCI20172.jpg" alt="">
-        <div class="maininfo">
-            <a href="https://choreographicinterfaces.org//" class="maintitle">The Conference for Research on Choreographic Interfaces (CRCI):</a>
-            <p class="mainsubtitle">Annual Conference 2025</p>
-            <p class="mainabout">CRCI explores the braid of choreography, computation, and surveillance through an interdisciplinary lens. Consciously Produced will oversee the production of the 2025 annual conference at Brown University's Granoff Center, facilitating meaningful discussions among leading voices in the field. More information coming soon. </p>
-        </div>
-       </div>
+    <main class="projectbody">
 <div class="projectBlocks">
-    <div class="container">
-        <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
+    <div class="container crciproject">
+        <img src="images/CRCI20172.png" alt="Avatar" class="image">
         <div class="overlay">
             <div class="text">A continuation of founder Ariane Michaud’s work on the first season of the podcast, Consciously Produced is now supporting the production of the second season, with Ariane taking on a role as one of the main hosts. More information at www.danceswithrobots.org </div>
         </div>
@@ -46,7 +38,14 @@
         </div>
     </div>        
 </div>
-
+<div class="projectBlocks"></div>
+    <div class="container">
+        <img src="images/CRCI_Version03.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+            <div class="text">A continuation of founder Ariane Michaud’s work on the first season of the podcast, Consciously Produced is now supporting the production of the second season, with Ariane taking on a role as one of the main hosts. More information at www.danceswithrobots.org </div>
+        </div>
+    </div>    
+</div>
 <!--<div class="projectBlocks">
     <div class="container">
         <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
